force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Payment_Calculation_Percent__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Payment_Calculation_Percent__c</fullName>
    <description>Administrators populate this optional percent field with the desired payment percentage value. The percentage value will be applied to the payment amount. By default, it is blank.</description>
    <inlineHelpText>Administrators populate this optional percent field with the desired payment percentage value. The percentage value will be applied to the payment amount. By default, it is blank.</inlineHelpText>
    <label>Payment Calculation Percent</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>