force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Payment_Type__c</fullName>
    <description>This optional picklist field captures the method for calculating payments.</description>
    <inlineHelpText>This optional picklist field captures the method for calculating payments.</inlineHelpText>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FixedPmt</fullName>
                <label>Fixed Payment</label>
            </value>
            <value>
                <fullName>PayInt</fullName>
                <label>Pay Interest</label>
            </value>
            <value>
                <fullName>PayPrin</fullName>
                <label>Pay Principle</label>
            </value>
            <value>
                <fullName>CalcPmt</fullName>
                <label>Calculated Payment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>