force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Payments_Per_Year__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Payments_Per_Year__c</fullName>
    <description>This optional number field determines the number of payments per year.</description>
    <inlineHelpText>This optional number field determines the number of payments per year.</inlineHelpText>
    <label>Payments Per Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>