force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Prepaid_Interest_Accrual_Code__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Prepaid_Interest_Accrual_Code__c</fullName>
    <description>Administrators and users populate this optional picklist field to determine odd days interest accrual type. By default, it is blank.</description>
    <inlineHelpText>Select the desired accrual code to calculate the prepaid interest due at closing.</inlineHelpText>
    <label>Odd Days Interest Accrual Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>True360_360</fullName>
            </value>
            <value>
                <fullName>True360_365</fullName>
            </value>
            <value>
                <fullName>Actual_360</fullName>
            </value>
            <value>
                <fullName>True365_360</fullName>
            </value>
            <value>
                <fullName>Actual_365</fullName>
            </value>
            <value>
                <fullName>True365_365</fullName>
            </value>
            <value>
                <fullName>Actual_Actual</fullName>
            </value>
            <value>
                <fullName>Midnight_366</fullName>
            </value>
            <value>
                <fullName>Actual_Variable_Days_Per_Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>