force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Pricing_Support_Status__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Pricing_Support_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This Checkbox field will be selected as True if the product is supported by Commercial Pricing and Profitability Pricing calculations, and False if only Profitability calculations are supported for this product.</description>
    <label>Is Pricing Supported</label>
    <type>Checkbox</type>
</CustomField>