force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Product_Term_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Product_Term_Type__c</fullName>
    <description>Product Term Type</description>
    <inlineHelpText>This is the time period used to describe the length of a Certificate term, which is used in conjunction with the number of such periods.</inlineHelpText>
    <label>Product Term Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Day(s)</fullName>
            </value>
            <value>
                <fullName>Month(s)</fullName>
            </value>
            <value>
                <fullName>Quarter(s)</fullName>
            </value>
            <value>
                <fullName>Year(s)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>