force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Purpose_Code__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Purpose_Code__c</fullName>
    <description>This field is manually populated. It is optional. This field is used to determine what the purpose code is for a group of products.</description>
    <label>Purpose Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>