force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Rate_Ceiling__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Rate_Ceiling__c</fullName>
    <description>The user manually populates this optional percent field to specify the maximum threshold of a loan&apos;s interest rate for a set period of time. By default, it is blank.</description>
    <inlineHelpText>Enter the desired maximum threshold for the loan interest rate.</inlineHelpText>
    <label>Rate Ceiling</label>
    <precision>11</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>