force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Rate_Change_Period__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Rate_Change_Period__c</fullName>
    <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. It is manually populated. It specifies how often the variable rate can change.</description>
    <inlineHelpText>Specifies how often the variable rate can change.</inlineHelpText>
    <label>Rate Change Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Every Other Week</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semiannually</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
            <value>
                <fullName>At any time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>