force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Rate_Change_Period_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Rate_Change_Period_Type__c</fullName>
    <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. It is manually populated. It specifies the period of time between periodic rate changes.</description>
    <inlineHelpText>Specifies the period of time between periodic rate changes.</inlineHelpText>
    <label>Rate Change Period Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Day(s)</fullName>
            </value>
            <value>
                <fullName>Month(s)</fullName>
            </value>
            <value>
                <fullName>Week(s)</fullName>
            </value>
            <value>
                <fullName>Year(s)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>