force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Rate_Floor__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Rate_Floor__c</fullName>
    <description>The user manually populates this optional percent field field to specify the minimum threshold of a loan&apos;s interest rate for a set period of time. By default, it is blank.</description>
    <inlineHelpText>Enter the desired minimum threshold for the loan interest rate.</inlineHelpText>
    <label>Rate Floor</label>
    <precision>11</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>