force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Secured__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Secured__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is manually populated. When enabled, it is used as a flag for the product feature to specify a product should be securedl. When disabled, it is used to specify a product does not need to be secured. By default, it is disabled. This field is typically used for approval process routing in conjunction with the Secured Individual Lending Authority and Unsecured Individual Lending Authority fields on the User object.</description>
    <label>Secured</label>
    <type>Checkbox</type>
</CustomField>