force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Step_Rate_Period__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Step_Rate_Period__c</fullName>
    <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. It is manually populated. It specifies the number of periods that the corresponding stepped rate applies to.</description>
    <inlineHelpText>The number of periods that the corresponding stepped rate will apply.</inlineHelpText>
    <label>Step Rate Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>