force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Term_Step__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Term_Step__c</fullName>
    <description>The user populates this required number field to specify the number of payments between increases in interest rate after the teaser term passes.</description>
    <inlineHelpText>Enter the number of payments between increases in interest rates after the passed teaser term.</inlineHelpText>
    <label>Term Step</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>