force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Unused_CreditConversionFactor__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Unused_CreditConversionFactor__c</fullName>
    <description>This field is used to calculate the unused amount of the loan for Exposure At Default calculations.</description>
    <label>Unused Credit Conversion Factor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>