force-app/main/default/objects/LLC_BI__Product_Feature__c/fields/LLC_BI__Use_Teaser_Rate__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Use_Teaser_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The user manually selects this checkbox field to indicate that the system should calculate the loan using the value entered in the Teaser Rate field and Teaser Term field for an initial draw period and calculate the loan with the Interest Rate for the remaining term. By default, this field is blank.</description>
    <inlineHelpText>Select this checkbox to use the Teaser Rate and Teaser Term in loan calculations.</inlineHelpText>
    <label>Calculate with Teaser Rate</label>
    <type>Checkbox</type>
</CustomField>